[gd_scene load_steps=31 format=3 uid="uid://jcflgwwwn1le"]

[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="1_kyse6"]
[ext_resource type="PackedScene" uid="uid://p0nwwoiajish" path="res://player.tscn" id="2_5fosw"]
[ext_resource type="Texture2D" uid="uid://6jy1584gnol" path="res://icon.svg" id="3_cda50"]
[ext_resource type="PackedScene" uid="uid://c16fabcn8ptp" path="res://enemy_spawner_totem.tscn" id="4_1k52j"]
[ext_resource type="Script" path="res://xp_spawner.gd" id="5_1pd12"]
[ext_resource type="PackedScene" uid="uid://5vtvxlilkwxa" path="res://xp.tscn" id="6_8fcpg"]
[ext_resource type="Script" path="res://SignalBus.gd" id="7_salve"]
[ext_resource type="Script" path="res://damage_notifier.gd" id="8_kwybg"]
[ext_resource type="PackedScene" uid="uid://c1j0q4pbd3wsu" path="res://damage_popup.tscn" id="9_svd4l"]
[ext_resource type="Script" path="res://UI.gd" id="10_npakd"]
[ext_resource type="PackedScene" uid="uid://becxdpu3rdald" path="res://upgrade_select.tscn" id="11_vkao0"]
[ext_resource type="Resource" uid="uid://bcg8h5axbiqw" path="res://resources/powerups/move_speed.tres" id="12_5set2"]
[ext_resource type="Resource" uid="uid://dmticccf3b4mu" path="res://resources/powerups/attack_range.tres" id="13_lj5sq"]
[ext_resource type="Resource" uid="uid://b8dxnhsqnei88" path="res://resources/powerups/damage.tres" id="14_pei87"]
[ext_resource type="Resource" uid="uid://drec0q66v6eb7" path="res://resources/powerups/pickup_radius.tres" id="15_xdyh8"]
[ext_resource type="Script" path="res://game_over.gd" id="16_0dgqe"]
[ext_resource type="Texture2D" uid="uid://cyqf2lb5ojevj" path="res://assets/ded.png" id="17_1mmgd"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3D.gd" id="18_t54sb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ltofi"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tk6ea"]
sky_material = SubResource("ProceduralSkyMaterial_ltofi")

[sub_resource type="Environment" id="Environment_73ap4"]
background_mode = 2
sky = SubResource("Sky_tk6ea")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ufw0k"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_glq8m"]
noise = SubResource("FastNoiseLite_ufw0k")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bnowy"]
albedo_color = Color(0.219608, 0.219608, 0.219608, 1)
albedo_texture = SubResource("NoiseTexture2D_glq8m")

[sub_resource type="PlaneMesh" id="PlaneMesh_aeau0"]
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v6tgy"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="BoxMesh" id="BoxMesh_ije44"]
size = Vector3(1, 10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_lgyxo"]
size = Vector3(1, 10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_riw0p"]
bg_color = Color(0.0470588, 0.6, 0.839216, 1)

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_4wd0j"]

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_73ap4")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 12, 6)
cull_mask = 1048573

[node name="PhantomCameraHost" type="Node" parent="MainCamera"]
script = ExtResource("1_kyse6")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 0
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
layers = 3
material_override = SubResource("StandardMaterial3D_bnowy")
mesh = SubResource("PlaneMesh_aeau0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("ConcavePolygonShape3D_v6tgy")

[node name="Player" parent="." instance=ExtResource("2_5fosw")]

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.565, 0)
remote_path = NodePath("../../Minimap/SubViewportContainer/SubViewport/Camera3D")
update_scale = false

[node name="Sprite3D" type="Sprite3D" parent="Player"]
layers = 2
billboard = 1
texture = ExtResource("3_cda50")

[node name="EnemyParent" type="Node3D" parent="."]

[node name="EnemySpawnerTotem" parent="." node_paths=PackedStringArray("player", "signal_bus", "enemy_parent") instance=ExtResource("4_1k52j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6492, 0, 0)
player = NodePath("../Player")
signal_bus = NodePath("../SignalBus")
enemy_parent = NodePath("../EnemyParent")

[node name="EnemySpawnerTotem2" parent="." node_paths=PackedStringArray("player", "signal_bus", "enemy_parent") instance=ExtResource("4_1k52j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 22.3029)
player = NodePath("../Player")
signal_bus = NodePath("../SignalBus")
enemy_parent = NodePath("../EnemyParent")

[node name="EnemySpawnerTotem3" parent="." node_paths=PackedStringArray("player", "signal_bus", "enemy_parent") instance=ExtResource("4_1k52j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.4791, 0, -12.915)
player = NodePath("../Player")
signal_bus = NodePath("../SignalBus")
enemy_parent = NodePath("../EnemyParent")

[node name="XpSpawner" type="Node3D" parent="."]
script = ExtResource("5_1pd12")
xp = ExtResource("6_8fcpg")

[node name="Environment" type="Node" parent="."]

[node name="Wall" type="StaticBody3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 0, 0)
collision_layer = 12
collision_mask = 12

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
layers = 3
mesh = SubResource("BoxMesh_ije44")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("BoxShape3D_lgyxo")

[node name="Wall2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 0)
collision_layer = 12
collision_mask = 12

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
layers = 3
mesh = SubResource("BoxMesh_ije44")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("BoxShape3D_lgyxo")

[node name="SignalBus" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("7_salve")

[node name="DamageNotifier" type="Node3D" parent="."]
script = ExtResource("8_kwybg")
damage_popup = ExtResource("9_svd4l")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_enabled = true
script = ExtResource("10_npakd")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_right = 57.0
offset_bottom = 104.0

[node name="Kills" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Kills: 0"

[node name="Alive" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Kills: 0"

[node name="Total" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Total: 0"

[node name="Xp" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Total: 0"

[node name="Stats" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Xp" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Progress" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="UI/Progress"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.0470588, 0.6, 0.839216, 1)

[node name="Level" type="Label" parent="UI/Progress/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1
"

[node name="XpBar" type="ProgressBar" parent="UI/Progress"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_riw0p")
show_percentage = false

[node name="UpgradeSelect" parent="UI" instance=ExtResource("11_vkao0")]
visible = false
offset_right = -0.00012207
choices = Array[Resource("res://resources/powerups/powerup.gd")]([ExtResource("12_5set2"), ExtResource("13_lj5sq"), ExtResource("14_pei87"), ExtResource("15_xdyh8")])

[node name="GameOver" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.682353)
script = ExtResource("16_0dgqe")

[node name="ded" type="TextureRect" parent="UI/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_1mmgd")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 12, 6)
script = ExtResource("18_t54sb")
priority_override = false
priority = 0
follow_mode = 2
follow_target = NodePath("../Player")
follow_parameters/target_offset = Vector3(0, 12, 6)
follow_parameters/damping = true
follow_parameters/damping_value = 5.0
look_at_mode = 0
tween_parameters = null
tween_on_load = false
inactive_update_mode = 0
camera_3D_resource = null

[node name="Minimap" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Minimap"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_bottom = 256.0
grow_horizontal = 0

[node name="SubViewport" type="SubViewport" parent="Minimap/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Minimap/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.565, 0)
cull_mask = 2
attributes = SubResource("CameraAttributesPhysical_4wd0j")

[connection signal="deal_damage" from="Player" to="DamageNotifier" method="_on_player_deal_damage"]
[connection signal="death" from="Player" to="UI/GameOver" method="_on_player_death"]
[connection signal="gain_xp" from="Player" to="UI" method="_on_player_gain_xp"]
[connection signal="level_up" from="Player" to="UI" method="_on_player_level_up"]
[connection signal="level_up" from="Player" to="UI/UpgradeSelect" method="_on_player_level_up"]
[connection signal="damage_dealt" from="SignalBus" to="DamageNotifier" method="_on_signal_bus_damage_dealt"]
[connection signal="enemy_died" from="SignalBus" to="XpSpawner" method="_on_signal_bus_enemy_died"]
[connection signal="enemy_died" from="SignalBus" to="UI" method="_on_signal_bus_enemy_died"]
[connection signal="enemy_spawned" from="SignalBus" to="UI" method="_on_signal_bus_enemy_spawned"]
[connection signal="gain_xp" from="SignalBus" to="Player" method="_on_signal_bus_gain_xp"]
[connection signal="pause_game" from="SignalBus" to="SignalBus" method="_on_pause_game"]
[connection signal="stats_updated" from="SignalBus" to="UI" method="_on_signal_bus_stats_updated"]
[connection signal="unpause_game" from="SignalBus" to="SignalBus" method="_on_unpause_game"]
[connection signal="select_powerup" from="UI/UpgradeSelect" to="Player" method="_on_upgrade_select_select_powerup"]
